@@ -52,7 +52,7 @@
 -(id) copyWithZone: (NSZone*) zone
 {
 	Action *copy = [[[self class] allocWithZone: zone] initWithDuration: [self duration] ];
-    return copy;
+	return copy;
 }
 
 
@@ -137,7 +137,7 @@
 -(id) copyWithZone: (NSZone*) zone
 {
 	Action *copy = [[[self class] allocWithZone:zone] initOne:[[[actions objectAtIndex:0] copy] autorelease] two:[[[actions objectAtIndex:1] copy] autorelease] ];
-    return copy;
+	return copy;
 }
 
 -(void) dealloc
@@ -224,7 +224,7 @@
 -(id) copyWithZone: (NSZone*) zone
 {
 	Action *copy = [[[self class] allocWithZone:zone] initWithAction:[[other copy] autorelease] times:times];
-    return copy;
+	return copy;
 }
 
 -(void) dealloc
@@ -336,7 +336,7 @@
 -(id) copyWithZone: (NSZone*) zone
 {
 	Action *copy = [[[self class] allocWithZone: zone] initOne: [[one copy] autorelease] two: [[two copy] autorelease] ];
-    return copy;
+	return copy;
 }
 
 -(void) dealloc
@@ -388,8 +388,8 @@
 
 -(id) copyWithZone: (NSZone*) zone
 {
-	Action *copy = [[[self class] allocWithZone: zone] initWithDuration: [self duration] angle: angle];
-    return copy;
+	Action *copy = [[[self class] allocWithZone: zone] initWithDuration:[self duration] angle: angle];
+	return copy;
 }
 
 -(void) start
@@ -430,7 +430,7 @@
 -(id) copyWithZone: (NSZone*) zone
 {
 	Action *copy = [[[self class] allocWithZone: zone] initWithDuration: [self duration] angle: angle];
-    return copy;
+	return copy;
 }
 
 -(void) start
@@ -473,7 +473,7 @@
 -(id) copyWithZone: (NSZone*) zone
 {
 	Action *copy = [[[self class] allocWithZone: zone] initWithDuration: [self duration] position: endPosition];
-    return copy;
+	return copy;
 }
 
 -(void) start
@@ -510,7 +510,7 @@
 -(id) copyWithZone: (NSZone*) zone
 {
 	Action *copy = [[[self class] allocWithZone: zone] initWithDuration: [self duration] position: delta];
-    return copy;
+	return copy;
 }
 
 -(void) start
@@ -549,7 +549,7 @@
 -(id) copyWithZone: (NSZone*) zone
 {
 	Action *copy = [[[self class] allocWithZone: zone] initWithDuration: [self duration] position: delta height:height jumps:jumps];
-    return copy;
+	return copy;
 }
 
 -(void) start
@@ -597,26 +597,45 @@
 	if( !(self=[super initWithDuration: t]) )
 		return nil;
 	
-	endScale = s;
+	endScaleX = s;
+	endScaleY = s;
+	return self;
+}
+
++(id) actionWithDuration: (ccTime) t scaleX:(float)sx scaleY:(float)sy 
+{
+	return [[[self alloc] initWithDuration: t scaleX:sx scaleY:sy] autorelease];
+}
+
+-(id) initWithDuration: (ccTime) t scaleX:(float)sx scaleY:(float)sy
+{
+	if( !(self=[super initWithDuration: t]) )
+		return nil;
+	
+	endScaleX = sx;
+	endScaleY = sy;
 	return self;
 }
 
 -(id) copyWithZone: (NSZone*) zone
 {
-	Action *copy = [[[self class] allocWithZone: zone] initWithDuration: [self duration] scale: endScale];
-    return copy;
+	Action *copy = [[[self class] allocWithZone: zone] initWithDuration: [self duration] scaleX: endScaleX scaleY:endScaleY];
+	return copy;
 }
 
 -(void) start
 {
 	[super start];
-	startScale = [target scale];
-	delta = endScale - startScale;
+	startScaleX = [target scaleX];
+	startScaleY = [target scaleY];
+	deltaX = endScaleX - startScaleX;
+	deltaY = endScaleY - startScaleY;
 }
 
 -(void) update: (ccTime) t
-{	
-	[target setScale: (startScale + delta * t ) ];	
+{
+	[target setScaleX: (startScaleX + deltaX * t ) ];
+	[target setScaleY: (startScaleY + deltaY * t ) ];
 }
 @end
 
@@ -627,12 +646,13 @@
 -(void) start
 {
 	[super start];
-	delta = startScale * endScale - startScale;
+	deltaX = startScaleX * endScaleX - startScaleX;
+	deltaY = startScaleY * endScaleY - startScaleY;
 }
 
 -(IntervalAction*) reverse
 {
-	return [ScaleBy actionWithDuration: duration scale: 1/endScale];
+	return [ScaleBy actionWithDuration: duration scaleX: 1/endScaleX scaleY:1/endScaleY];
 }
 @end
 
@@ -656,7 +676,7 @@
 -(id) copyWithZone: (NSZone*) zone
 {
 	Action *copy = [[[self class] allocWithZone: zone] initWithDuration: [self duration] blinks: times];
-    return copy;
+	return copy;
 }
 
 -(void) update: (ccTime) t
@@ -721,7 +741,7 @@
 -(id) copyWithZone: (NSZone*) zone
 {
 	Action *copy = [[[self class] allocWithZone: zone] initWithDuration: [self duration] opacity: toOpacity];
-    return copy;
+	return copy;
 }
 
 -(void) start
@@ -762,7 +782,7 @@
 -(id) copyWithZone: (NSZone*) zone
 {
 	Action *copy = [[[self class] allocWithZone: zone] initWithAction: [[other copy] autorelease] rate: rate];
-    return copy;
+	return copy;
 }
 
 - (void) dealloc
@@ -813,7 +833,7 @@
 -(id) copyWithZone: (NSZone*) zone
 {
 	Action *copy = [[[self class] allocWithZone: zone] initWithAction: [[other copy] autorelease] ];
-    return copy;
+	return copy;
 }
 
 -(void) dealloc
@@ -868,7 +888,7 @@
 -(id) copyWithZone: (NSZone*) zone
 {
 	Action *copy = [[[self class] allocWithZone:zone] initWithAction:[[other copy] autorelease] speed:speed];
-    return copy;
+	return copy;
 }
 
 -(void) dealloc
@@ -894,6 +914,7 @@
 	return [Speed actionWithAction: [other reverse] speed:speed];
 }
 @end
+
 
 //
 // DelayTime
